--- a/assets/deveb.1.0/_kap-orgusu.scss
+++ b/assets/deveb.1.0/_kap-orgusu.scss
@@ -116,24 +116,24 @@ Düzenler //////////////////////////////////
     [data-#{$ekran}*="dengeli-#{aralık}-1"] > *{padding:10px;}
     [data-#{$ekran}*="dengeli-#{aralık}-2"] > *{padding:15px;}
     [data-#{$ekran}*="dengeli-#{aralık}-3"] > *{padding:20px;}
-    [data-#{$ekran}*="dengeli-#{aralık}-l1"] > *{margin-left: 10px;}
-    [data-#{$ekran}*="dengeli-#{aralık}-l2"] > *{margin-left: 15px;}
-    [data-#{$ekran}*="dengeli-#{aralık}-l3"] > *{margin-left: 20px;}
-    [data-#{$ekran}*="dengeli-#{aralık}-s1"] > *{margin-right: 10px;}
-    [data-#{$ekran}*="dengeli-#{aralık}-s2"] > *{margin-right: 15px;}
-    [data-#{$ekran}*="dengeli-#{aralık}-s3"] > *{margin-right: 20px;}
-    [data-#{$ekran}*="dengeli-#{aralık}-t1"] > *{margin-top: 10px;}
-    [data-#{$ekran}*="dengeli-#{aralık}-t2"] > *{margin-top: 15px;}
-    [data-#{$ekran}*="dengeli-#{aralık}-t3"] > *{margin-top: 20px;}
-    [data-#{$ekran}*="dengeli-#{aralık}-a1"] > *{margin-bottom: 10px;}
-    [data-#{$ekran}*="dengeli-#{aralık}-a2"] > *{margin-bottom: 15px;}
-    [data-#{$ekran}*="dengeli-#{aralık}-a3"] > *{margin-bottom: 20px;}
-    [data-#{$ekran}*="dengeli-#{aralık}-ls1"] > *{margin-left: 10px;margin-right: 10px;}
-    [data-#{$ekran}*="dengeli-#{aralık}-ls2"] > *{margin-left: 15px;margin-right: 15px;}
-    [data-#{$ekran}*="dengeli-#{aralık}-ls3"] > *{margin-left: 20px;margin-right: 20px;}
-    [data-#{$ekran}*="dengeli-#{aralık}-ta1"] > *{margin-top: 10px;margin-bottom: 10px;}
-    [data-#{$ekran}*="dengeli-#{aralık}-ta2"] > *{margin-top: 15px;margin-bottom: 15px;}
-    [data-#{$ekran}*="dengeli-#{aralık}-ta3"] > *{margin-top: 20px;margin-bottom: 20px;}
+    [data-#{$ekran}*="dengeli-#{aralık}-l1"] > *{padding-left: 10px;}
+    [data-#{$ekran}*="dengeli-#{aralık}-l2"] > *{padding-left: 15px;}
+    [data-#{$ekran}*="dengeli-#{aralık}-l3"] > *{padding-left: 20px;}
+    [data-#{$ekran}*="dengeli-#{aralık}-s1"] > *{padding-right: 10px;}
+    [data-#{$ekran}*="dengeli-#{aralık}-s2"] > *{padding-right: 15px;}
+    [data-#{$ekran}*="dengeli-#{aralık}-s3"] > *{padding-right: 20px;}
+    [data-#{$ekran}*="dengeli-#{aralık}-t1"] > *{padding-top: 10px;}
+    [data-#{$ekran}*="dengeli-#{aralık}-t2"] > *{padding-top: 15px;}
+    [data-#{$ekran}*="dengeli-#{aralık}-t3"] > *{padding-top: 20px;}
+    [data-#{$ekran}*="dengeli-#{aralık}-a1"] > *{padding-bottom: 10px;}
+    [data-#{$ekran}*="dengeli-#{aralık}-a2"] > *{padding-bottom: 15px;}
+    [data-#{$ekran}*="dengeli-#{aralık}-a3"] > *{padding-bottom: 20px;}
+    [data-#{$ekran}*="dengeli-#{aralık}-ls1"] > *{padding-left: 10px;padding-right: 10px;}
+    [data-#{$ekran}*="dengeli-#{aralık}-ls2"] > *{padding-left: 15px;padding-right: 15px;}
+    [data-#{$ekran}*="dengeli-#{aralık}-ls3"] > *{padding-left: 20px;padding-right: 20px;}
+    [data-#{$ekran}*="dengeli-#{aralık}-ta1"] > *{padding-top: 10px;padding-bottom: 10px;}
+    [data-#{$ekran}*="dengeli-#{aralık}-ta2"] > *{padding-top: 15px;padding-bottom: 15px;}
+    [data-#{$ekran}*="dengeli-#{aralık}-ta3"] > *{padding-top: 20px;padding-bottom: 20px;}
 
     [data-#{$gnl}~="#{$aralık}"] > [data-#{$gnl}]{
       margin: var(--aralık);
