Deveb 1.0 belleti sayfaları
Belleti sayfaları oluşturuldu ve güncelleniyor.

--- a/_includes/s1n0/dallik.html
+++ b/_includes/s1n0/dallik.html
@@ -3,66 +3,66 @@
   <label for="menü-ana">•••</label>
   <label for="menü-ana-çapraz">///</label>
   <ul class="imge" data-menü="görünür dikey">
-    <li class="{% if page.url == '/belgeler/deveb.html' %}etkin{% endif %}">
-      <a href="/1.0/tr/deveb.html">Giriş</a>
+    <li class="{% if page.url == '/1.0/tr/' %}etkin{% endif %}">
+      <a href="/1.0/tr/">Giriş</a>
     </li>
-    <li class="{% if page.url == '/belgeler/kurulum.html' %}etkin{% endif %}">
+    <li class="{% if page.url == '/1.0/tr/kurulum.html' %}etkin{% endif %}">
       <a href="/1.0/tr/kurulum.html">Kurulum</a>
     </li>
-    <li class="{% if page.url == '/belgeler/ekran-orgusu.html' %}etkin{% endif %}">
+    <li class="{% if page.url == '/1.0/tr/ekran-orgusu.html' %}etkin{% endif %}">
       <a href="/1.0/tr/ekran-orgusu.html">Ekran Örgüsü</a>
     </li>
-    <li class="{% if page.url == '/belgeler/kap-orgusu.html' %}etkin{% endif %}">
+    <li class="{% if page.url == '/1.0/tr/kap-orgusu.html' %}etkin{% endif %}">
       <a href="/1.0/tr/kap-orgusu.html">Kap Örgüsü</a>
-      <input id="kap-örgüsü" type="checkbox" {% if page.url == '/belgeler/kap-orgusu.html' or page.url contains '/belgeler/kap-orgusu/' or page.url contains '/belgeler/ornekler/' %}checked{% endif %} data-kapaç="sağda">
+      <input id="kap-örgüsü" type="checkbox" {% if page.url == '/1.0/tr/kap-orgusu.html' or page.url contains '/1.0/tr/kap-orgusu/' or page.url contains '/1.0/tr/ornekler/' %}checked{% endif %} data-kapaç="sağda">
       <label for="kap-örgüsü"><span>▽</span></label>
       <label for="kap-örgüsü"><span>▼</span></label>
       <ul>
-        <li class="{% if page.url == '/belgeler/kap-orgusu/parca-duzeni.html' %}etkin{% endif %}">
-          <a href="/belgeler/kap-orgusu/parca-duzeni.html">Parça Düzeni</a>
+        <li class="{% if page.url == '/1.0/tr/kap-orgusu/parca-duzeni.html' %}etkin{% endif %}">
+          <a href="/1.0/tr/kap-orgusu/parca-duzeni.html">Parça Düzeni</a>
         </li>
-        <li class="{% if page.url == '/belgeler/kap-orgusu/genlesme-duzeni.html' %}etkin{% endif %}">
-          <a href="/belgeler/kap-orgusu/genlesme-duzeni.html">Genleşme Düzeni</a>
+        <li class="{% if page.url == '/1.0/tr/kap-orgusu/genlesme-duzeni.html' %}etkin{% endif %}">
+          <a href="/1.0/tr/kap-orgusu/genlesme-duzeni.html">Genleşme Düzeni</a>
         </li>
-        <li class="{% if page.url == '/belgeler/kap-orgusu/konumlama.html' %}etkin{% endif %}">
-          <a href="/belgeler/kap-orgusu/konumlama.html">Konumlama</a>
+        <li class="{% if page.url == '/1.0/tr/kap-orgusu/konumlama.html' %}etkin{% endif %}">
+          <a href="/1.0/tr/kap-orgusu/konumlama.html">Konumlama</a>
         </li>
-        <li class="{% if page.url == '/belgeler/kap-orgusu/siralama.html' %}etkin{% endif %}">
-          <a href="/belgeler/kap-orgusu/siralama.html">Sıralama</a>
+        <li class="{% if page.url == '/1.0/tr/kap-orgusu/siralama.html' %}etkin{% endif %}">
+          <a href="/1.0/tr/kap-orgusu/siralama.html">Sıralama</a>
         </li>
-        <li class="{% if page.url == '/belgeler/kap-orgusu/olcekler.html' %}etkin{% endif %}">
-          <a href="/belgeler/kap-orgusu/olcekler.html">Ölçekler</a>
+        <li class="{% if page.url == '/1.0/tr/kap-orgusu/olcekler.html' %}etkin{% endif %}">
+          <a href="/1.0/tr/kap-orgusu/olcekler.html">Ölçekler</a>
         </li>
         <li>
-          <input id="kap-örgüsü-örnekler" type="checkbox" {% if page.url contains '/belgeler/ornekler/' %}checked{% endif %} data-kapaç="sağda">
+          <input id="kap-örgüsü-örnekler" type="checkbox" {% if page.url contains '/1.0/tr/ornekler/' %}checked{% endif %} data-kapaç="sağda">
           <label for="kap-örgüsü-örnekler"><a href="#">Örnekler</a><span>▽</span></label>
           <label for="kap-örgüsü-örnekler"><a href="#">Örnekler</a><span>▼</span></label>
           <ul>
-            <li class="{% if page.url == '/belgeler/ornekler/kap-orgusu-esit-bolme.html' %}etkin{% endif %}">
-              <a href="/belgeler/ornekler/kap-orgusu-esit-bolme.html">Eşit Bölme #1</a>
+            <li class="{% if page.url == '/1.0/tr/ornekler/kap-orgusu-esit-bolme.html' %}etkin{% endif %}">
+              <a href="/1.0/tr/ornekler/kap-orgusu-esit-bolme.html">Eşit Bölme #1</a>
             </li>
-            <li class="{% if page.url == '/belgeler/ornekler/kap-orgusu-esit-bolme-2.html' %}etkin{% endif %}">
-              <a href="/belgeler/ornekler/kap-orgusu-esit-bolme-2.html">Eşit Bölme #2</a>
+            <li class="{% if page.url == '/1.0/tr/ornekler/kap-orgusu-esit-bolme-2.html' %}etkin{% endif %}">
+              <a href="/1.0/tr/ornekler/kap-orgusu-esit-bolme-2.html">Eşit Bölme #2</a>
             </li>
           </ul>
         </li>
       </ul>
     </li>
     <!--
-    <li class="{% if page.url == '/belgeler/sekme-orgusu.html' %}etkin{% endif %}">
-      <a href="/belgeler/sekme-orgusu.html">Sekme Örgüsü</a>
+    <li class="{% if page.url == '/1.0/tr/sekme-orgusu.html' %}etkin{% endif %}">
+      <a href="/1.0/tr/sekme-orgusu.html">Sekme Örgüsü</a>
     </li>
-    <li class="{% if page.url == '/belgeler/renk-orgusu.html' %}etkin{% endif %}">
-      <a href="/belgeler/renk-orgusu.html">Renk Örgüsü</a>
+    <li class="{% if page.url == '/1.0/tr/renk-orgusu.html' %}etkin{% endif %}">
+      <a href="/1.0/tr/renk-orgusu.html">Renk Örgüsü</a>
     </li>
-    <li class="{% if page.url == '/belgeler/terimler.html' %}etkin{% endif %}">
-      <a href="/belgeler/terimler.html">Terimler</a>
+    <li class="{% if page.url == '/1.0/tr/terimler.html' %}etkin{% endif %}">
+      <a href="/1.0/tr/terimler.html">Terimler</a>
     </li>
-    <li class="{% if page.url == '/belgeler/takim.html' %}etkin{% endif %}">
-      <a href="/belgeler/takim.html">Takım</a>
+    <li class="{% if page.url == '/1.0/tr/takim.html' %}etkin{% endif %}">
+      <a href="/1.0/tr/takim.html">Takım</a>
     </li>
-    <li class="{% if page.url == '/belgeler/tarayici-destegi.html' %}etkin{% endif %}">
-      <a href="/belgeler/tarayici-destegi.html">Tarayıcı Desteği</a>
+    <li class="{% if page.url == '/1.0/tr/tarayici-destegi.html' %}etkin{% endif %}">
+      <a href="/1.0/tr/tarayici-destegi.html">Tarayıcı Desteği</a>
     </li>-->
   </ul>
 </nav>
