--- a/_includes/s1n0/head.html
+++ b/_includes/s1n0/head.html
@@ -11,9 +11,8 @@
 	<!-- Font Awesome -->
 	<link rel="stylesheet" href="/assets/css/font-awesome.min.css">
 
-	<!-- prism.js -->
-	<link rel="stylesheet" href="/assets/plugins/prism/prism.css">
-	<script src="/assets/plugins/prism/prism.js"></script>
+	<!-- highlight -->
+	<link rel="stylesheet" href="/assets/plugins/highlight.css">
 
 
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
