--- a/assets/plugins/highlight.css
+++ b/assets/plugins/highlight.css
@@ -1,4 +1,10 @@
-.highlight  { background: #ffffff; }
+.highlight  { background: #f5f5f5;
+width: 100%;
+margin: 0;
+padding-top: 15px;
+border: 2px solid #f0f0f0;
+font-family: inherit;
+font-size: 14px; }
 .highlight .c { color: #999988; font-style: italic } /* Comment */
 .highlight .err { color: #a61717; background-color: #e3d2d2 } /* Error */
 .highlight .k { font-weight: bold } /* Keyword */
