--- a/assets/plugins/highlight.css
+++ b/assets/plugins/highlight.css
@@ -1,3 +1,36 @@
+
+
+@-webkit-keyframes devebcan {
+   0%{background-position:93% 0%}
+   50%{background-position:0% 100%}
+   100%{background-position:93% 0%}
+}
+@-moz-keyframes devebcan {
+   0%{background-position:93% 0%}
+   50%{background-position:0% 100%}
+   100%{background-position:93% 0%}
+}
+@-o-keyframes devebcan {
+   0%{background-position:93% 0%}
+   50%{background-position:0% 100%}
+   100%{background-position:93% 0%}
+}
+@keyframes devebcan {
+   0%{background-position:93% 0%}
+   50%{background-position:0% 100%}
+   100%{background-position:93% 0%}
+}
+
+.önizleme div{
+  -webkit-animation: devebcan 24s ease infinite;
+  -moz-animation: devebcan 24s ease infinite;
+  -o-animation: devebcan 24s ease infinite;
+  animation: devebcan 24s ease infinite;
+  background: linear-gradient(225deg, #373086, #000000, #3242af);
+background-size: 600% 600%;
+  color:#fff;
+}
+
 .highlight  { background: #f5f5f5;
 width: 100%;
 margin: 0;
